updates to events and nav

--- a/accommodation.html
+++ b/accommodation.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Accommodation • Millington Village Hall</title>
         <meta name="description" content="Camping-barn style accommodation at Millington Village Hall." />
-        <link rel="stylesheet" href="style/site.css?v=1771336666" />
+        <link rel="stylesheet" href="style/site.css?v=1771443116" />
     </head>
     <body>
         <header class="topbar">
@@ -19,15 +19,21 @@
                     </div>
                 </a>
 
-                <nav aria-label="Primary">
-                    <a href="index.html">Home</a>
-                    <a href="around.html">Around Millington</a>
-                    <a class="active" href="accommodation.html">Accommodation</a>
-                    <a href="location.html">Location</a>
-                </nav>
+                <!-- Right side: nav + phone stacked -->
+                <div class="topbarRight">
+                    <nav aria-label="Primary">
+                        <a href="index.html">Home</a>
+                        <a href="around.html">Around Millington</a>
+                        <a class="active" href="accommodation.html">Accommodation</a>
+                        <a href="location.html">Location</a>
+                        <a href="events.html">Events</a>
+                    </nav>
 
-                <div class="navcta">
-                    <div class="pill" title="Telephone">Call <strong>01759 301931</strong></div>
+                    <div class="navcta">
+                        <div class="pill" title="Telephone">
+                            Call <strong><a href="tel:01759301931">01759 301931</a></strong>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
@@ -54,7 +60,7 @@
                     <div class="kv">
                         <div><div><strong>Capacity</strong></div>Up to 10 camp beds / sleeping mats (single room)</div>
                         <div><div><strong>Bring</strong></div>Your own sleeping bag, towel, etc.</div>
-                        
+
                         <div><div><strong>Payment</strong></div>Bank transfer (details on booking form)</div>
                         <div>Email</div>
                         <div><a class="inline" href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
@@ -139,8 +145,16 @@
 
         <footer>
             <div class="container foot">
-                <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
-                <div><a href="index.html">Home</a> • <a href="around.html">Around Millington</a> • <a href="location.html">Location</a></div>
+                <div>
+                    <a href="tel:01759301931">01759 301931</a> •
+                    <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a>
+                </div>
+                <div>
+                    <a href="index.html">Home</a> •
+                    <a href="around.html">Around Millington</a> •
+                    <a href="location.html">Location</a> •
+                    <a href="events.html">Events</a>
+                </div>
             </div>
         </footer>
 
