--- a/around.html
+++ b/around.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Around Millington • Millington Village Hall</title>
         <meta name="description" content="Walks, countryside, and places of interest around Millington." />
-        <link rel="stylesheet" href="style/site.css?v=1771336666" />
+        <link rel="stylesheet" href="style/site.css?v=1771443116" />
     </head>
     <body>
         <header class="topbar">
@@ -19,15 +19,21 @@
                     </div>
                 </a>
 
-                <nav aria-label="Primary">
-                    <a href="index.html">Home</a>
-                    <a class="active" href="around.html">Around Millington</a>
-                    <a href="accommodation.html">Accommodation</a>
-                    <a href="location.html">Location</a>
-                </nav>
+                <!-- Right side: nav + phone stacked -->
+                <div class="topbarRight">
+                    <nav aria-label="Primary">
+                        <a href="index.html">Home</a>
+                        <a class="active" href="around.html">Around Millington</a>
+                        <a href="accommodation.html">Accommodation</a>
+                        <a href="location.html">Location</a>
+                        <a href="events.html">Events</a>
+                    </nav>
 
-                <div class="navcta">
-                    <div class="pill">Call <strong>01759 301931</strong></div>
+                    <div class="navcta">
+                        <div class="pill" title="Telephone">
+                            Call <strong><a href="tel:01759301931">01759 301931</a></strong>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
@@ -135,8 +141,16 @@
 
         <footer>
             <div class="container foot">
-                <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
-                <div><a href="index.html">Home</a> • <a href="accommodation.html">Accommodation</a> • <a href="location.html">Location</a></div>
+                <div>
+                    <a href="tel:01759301931">01759 301931</a> •
+                    <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a>
+                </div>
+                <div>
+                    <a href="index.html">Home</a> •
+                    <a href="accommodation.html">Accommodation</a> •
+                    <a href="location.html">Location</a> •
+                    <a href="events.html">Events</a>
+                </div>
             </div>
         </footer>
 
