--- a/location.html
+++ b/location.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Location • Millington Village Hall</title>
         <meta name="description" content="Find Millington Village Hall on Church Lane, Millington, York." />
-        <link rel="stylesheet" href="style/site.css?v=1771336666" />
+        <link rel="stylesheet" href="style/site.css?v=1771443116" />
     </head>
     <body>
         <header class="topbar">
@@ -19,15 +19,21 @@
                     </div>
                 </a>
 
-                <nav aria-label="Primary">
-                    <a href="index.html">Home</a>
-                    <a href="around.html">Around Millington</a>
-                    <a href="accommodation.html">Accommodation</a>
-                    <a class="active" href="location.html">Location</a>
-                </nav>
+                <!-- Right side: nav + phone stacked -->
+                <div class="topbarRight">
+                    <nav aria-label="Primary">
+                        <a href="index.html">Home</a>
+                        <a href="around.html">Around Millington</a>
+                        <a href="accommodation.html">Accommodation</a>
+                        <a class="active" href="location.html">Location</a>
+                        <a href="events.html">Events</a>
+                    </nav>
 
-                <div class="navcta">
-                    <div class="pill" title="Telephone">Call <strong>01759 301931</strong></div>
+                    <div class="navcta">
+                        <div class="pill" title="Telephone">
+                            Call <strong><a href="tel:01759301931">01759 301931</a></strong>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
@@ -88,7 +94,7 @@
         <main class="container">
             <section id="map" class="mapSection">
                 <div class="mapWrap">
-                    <iframe src="https://www.google.com/maps?q=Church%20Ln%2C%20Millington%2C%20York%2C%20UK&output=embed" loading="lazy"> </iframe>
+                    <iframe src="https://www.google.com/maps?q=Millington+Village+Hall,+Church+Lane,+Millington,+East+Riding+of+Yorkshire&output=embed" loading="lazy" referrerpolicy="no-referrer-when-downgrade"> </iframe>
                 </div>
             </section>
             <section class="grid" style="margin-top: 18px">
@@ -113,8 +119,14 @@
 
         <footer>
             <div class="container foot">
-                <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
-                <div><a href="index.html">Home</a> • <a href="around.html">Around Millington</a> • <a href="accommodation.html">Accommodation</a></div>
+                <div>
+                    <a href="tel:01759 301931">01759 301931</a> •
+                    <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a>
+                </div>
+                <div>
+                    <a href="index.html">Home</a> • <a href="around.html">Around Millington</a> • <a href="accommodation.html">Accommodation</a> •
+                    <a href="events.html">Events</a>
+                </div>
             </div>
         </footer>
 
