--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
         <title>Events • Millington Village Hall</title>
         <meta name="description" content="Upcoming and regular events at Millington Village Hall." />
 
-        <link rel="stylesheet" href="style/site.css?v=1771443116" />
+        <link rel="stylesheet" href="style/site.css?v=1771443365" />
         <link rel="stylesheet" href="style/events.css?v=1" />
     </head>
 
@@ -47,8 +47,7 @@
                         <div class="kicker"><span class="dot" aria-hidden="true"></span>Events</div>
                         <h2>What’s on at the hall.</h2>
                         <p>
-                            One-off events and regular groups — sorted by what’s coming up next.
-                            Recurring events show their next occurrence.
+                            One-off events and regular groups.
                         </p>
                         <div class="actions">
                             <a class="btn primary" href="tel:01759301931">Ring to book</a>
