layout for events fixes

--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
         <title>Events • Millington Village Hall</title>
         <meta name="description" content="Upcoming and regular events at Millington Village Hall." />
 
-        <link rel="stylesheet" href="style/site.css?v=1771443365" />
+        <link rel="stylesheet" href="style/site.css?v=1771443803" />
         <link rel="stylesheet" href="style/events.css?v=1" />
     </head>
 
@@ -32,9 +32,7 @@
                     </nav>
 
                     <div class="navcta">
-                        <a class="pill" href="tel:01759301931" title="Telephone">
-                            Call <strong>01759 301931</strong>
-                        </a>
+                        <a class="pill" href="tel:01759301931" title="Telephone"> Call <strong>01759 301931</strong> </a>
                     </div>
                 </div>
             </div>
@@ -42,13 +40,11 @@
 
         <section class="hero">
             <div class="container heroGrid">
-                <div class="heroCard" style="padding: 2.5rem;">
-                    <div class="heroContent" style="position: static; color: inherit;">
+                <div class="heroCard">
+                    <div class="heroContent">
                         <div class="kicker"><span class="dot" aria-hidden="true"></span>Events</div>
                         <h2>What’s on at the hall.</h2>
-                        <p>
-                            One-off events and regular groups.
-                        </p>
+                        <p>One-off events and regular groups.</p>
                         <div class="actions">
                             <a class="btn primary" href="tel:01759301931">Ring to book</a>
                             <a class="btn" href="index.html">Back to home</a>
@@ -60,9 +56,7 @@
                     <h3>Bookings & enquiries</h3>
                     <div class="small">For information and bookings, ring:</div>
                     <div class="hr"></div>
-                    <a class="pill" href="tel:01759301931">
-                        Call <strong>01759 301931</strong>
-                    </a>
+                    <a class="pill" href="tel:01759301931"> Call <strong>01759 301931</strong> </a>
 
                     <div class="hr"></div>
 
