--- a/around.html
+++ b/around.html
@@ -6,16 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Around Millington • Millington Village Hall</title>
         <meta name="description" content="Walks, countryside, and places of interest around Millington." />
-        <link rel="stylesheet" href="style/site.css?v=1771444238" />
+        <link rel="stylesheet" href="style/site.css?v=1771533204" />
     </head>
     <body>
         <header class="topbar">
             <div class="container navwrap">
                 <a class="brand" href="index.html" aria-label="Millington Village Hall home">
-                    <img class="logo" src="./logo.png" alt="Millington Village Hall logo" />
+                    <img class="logo" src="./logo.svg" alt="Millington Village Hall logo" />
                     <div class="brandText">
-                        <div class="brandTitle">Millington Village Hall</div>
-                        <div class="brandTag">Yorkshire Wolds • Church Lane</div>
+                        <!-- <div class="brandTitle">Millington Village Hall</div> -->
+                        <!-- <div class="brandTag">Yorkshire Wolds • Church Lane</div> -->
                     </div>
                 </a>
 
