tweaks to logo and title bar

--- a/accommodation.html
+++ b/accommodation.html
@@ -6,16 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Accommodation • Millington Village Hall</title>
         <meta name="description" content="Camping-barn style accommodation at Millington Village Hall." />
-        <link rel="stylesheet" href="style/site.css?v=1771533891" />
+        <link rel="stylesheet" href="style/site.css?v=1771586108" />
     </head>
     <body>
         <header class="topbar">
             <div class="container navwrap">
                 <a class="brand" href="index.html" aria-label="Millington Village Hall home">
-                    <img class="logo" src="./logo.svg" alt="Millington Village Hall logo" />
+                    <img class="logo" src="./logo_notext.svg" alt="Millington Village Hall logo" />
                     <div class="brandText">
-                        <!-- <div class="brandTitle">Millington Village Hall</div> -->
-                        <!-- <div class="brandTag">Yorkshire Wolds • Church Lane</div> -->
+                        <div class="brandTitle">Millington Village Hall</div>
+                        <div class="brandTag">Yorkshire Wolds • Church Lane</div>
                     </div>
                 </a>
 
@@ -126,7 +126,7 @@
                             <a class="inline" href="https://thegaitinn.co.uk/" target="_blank" rel="noopener"> The Gait Inn </a>
                             most nights, and the
                             <a class="inline" href="https://www.ramblersrestmillington.co.uk/" target="_blank" rel="noopener"> Ramblers’ Rest </a>
-                            tea rooms are open for lunches Thursday to Monday (and dinner on application).
+                            tea rooms are open for lunches Thursday to Monday.
                         </p>
                     </div>
                 </article>
