--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
         <title>Events • Millington Village Hall</title>
         <meta name="description" content="Upcoming and regular events at Millington Village Hall." />
 
-        <link rel="stylesheet" href="style/site.css?v=1771533891" />
+        <link rel="stylesheet" href="style/site.css?v=1771586108" />
         <link rel="stylesheet" href="style/events.css?v=1" />
     </head>
 
@@ -14,10 +14,10 @@
         <header class="topbar">
             <div class="container navwrap">
                 <a class="brand" href="index.html" aria-label="Millington Village Hall home">
-                    <img class="logo" src="./logo.svg" alt="Millington Village Hall logo" />
+                    <img class="logo" src="./logo_notext.svg" alt="Millington Village Hall logo" />
                     <div class="brandText">
-                        <!-- <div class="brandTitle">Millington Village Hall</div> -->
-                        <!-- <div class="brandTag">Yorkshire Wolds • Church Lane</div> -->
+                        <div class="brandTitle">Millington Village Hall</div>
+                        <div class="brandTag">Yorkshire Wolds • Church Lane</div>
                     </div>
                 </a>
 
