--- a/location.html
+++ b/location.html
@@ -6,16 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Location • Millington Village Hall</title>
         <meta name="description" content="Find Millington Village Hall on Church Lane, Millington, York." />
-        <link rel="stylesheet" href="style/site.css?v=1771533891" />
+        <link rel="stylesheet" href="style/site.css?v=1771586108" />
     </head>
     <body>
         <header class="topbar">
             <div class="container navwrap">
                 <a class="brand" href="index.html" aria-label="Millington Village Hall home">
-                    <img class="logo" src="./logo.svg" alt="Millington Village Hall logo" />
+                    <img class="logo" src="./logo_notext.svg" alt="Millington Village Hall logo" />
                     <div class="brandText">
-                        <!-- <div class="brandTitle">Millington Village Hall</div> -->
-                        <!-- <div class="brandTag">Yorkshire Wolds • Church Lane</div> -->
+                        <div class="brandTitle">Millington Village Hall</div>
+                        <div class="brandTag">Yorkshire Wolds • Church Lane</div>
                     </div>
                 </a>
 
