--- a/accommodation.html
+++ b/accommodation.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Accommodation • Millington Village Hall</title>
         <meta name="description" content="Camping-barn style accommodation at Millington Village Hall." />
-        <link rel="stylesheet" href="style/site.css?v=1771586449" />
+        <link rel="stylesheet" href="style/site.css?v=1771586624" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
     </head>
     <body>
         <header class="topbar">
