--- a/around.html
+++ b/around.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Around Millington • Millington Village Hall</title>
         <meta name="description" content="Walks, countryside, and places of interest around Millington." />
-        <link rel="stylesheet" href="style/site.css?v=1771586449" />
+        <link rel="stylesheet" href="style/site.css?v=1771586624" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
     </head>
     <body>
         <header class="topbar">
