--- a/events.html
+++ b/events.html
@@ -6,8 +6,9 @@
         <title>Events • Millington Village Hall</title>
         <meta name="description" content="Upcoming and regular events at Millington Village Hall." />
 
-        <link rel="stylesheet" href="style/site.css?v=1771586449" />
+        <link rel="stylesheet" href="style/site.css?v=1771586624" />
         <link rel="stylesheet" href="style/events.css?v=1" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
     </head>
 
     <body>
