--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Millington Village Hall</title>
         <meta name="description" content="Millington Village Hall in the Yorkshire Wolds - hire, accommodation, and local information." />
-        <link rel="stylesheet" href="style/site.css?v=1771586449" />
+        <link rel="stylesheet" href="style/site.css?v=1771586624" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico">
     </head>
     <body>
         <header class="topbar">
