--- a/accommodation.html
+++ b/accommodation.html
@@ -6,8 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Accommodation • Millington Village Hall</title>
         <meta name="description" content="Camping-barn style accommodation at Millington Village Hall." />
-        <link rel="stylesheet" href="style/site.css?v=1771586624" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="stylesheet" href="style/site.css?v=1771586817" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="icon" href="/favicon.ico" sizes="any" />
+        <link rel="manifest" href="/site.webmanifest" />
     </head>
     <body>
         <header class="topbar">
@@ -59,10 +63,19 @@
                     <h3>Key details</h3>
 
                     <div class="kv">
-                        <div><div><strong>Capacity</strong></div>Up to 10 camp beds / sleeping mats (single room)</div>
-                        <div><div><strong>Bring</strong></div>Your own sleeping bag, towel, etc.</div>
+                        <div>
+                            <div><strong>Capacity</strong></div>
+                            Up to 10 camp beds / sleeping mats (single room)
+                        </div>
+                        <div>
+                            <div><strong>Bring</strong></div>
+                            Your own sleeping bag, towel, etc.
+                        </div>
 
-                        <div><div><strong>Payment</strong></div>Bank transfer (details on booking form)</div>
+                        <div>
+                            <div><strong>Payment</strong></div>
+                            Bank transfer (details on booking form)
+                        </div>
                         <div>Email</div>
                         <div><a class="inline" href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
                     </div>
@@ -151,9 +164,7 @@
                     <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a>
                 </div>
                 <div>
-                    <a href="index.html">Home</a> •
-                    <a href="around.html">Around Millington</a> •
-                    <a href="location.html">Location</a> •
+                    <a href="index.html">Home</a> • <a href="around.html">Around Millington</a> • <a href="location.html">Location</a> •
                     <a href="events.html">Events</a>
                 </div>
             </div>
