--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Millington Village Hall</title>
         <meta name="description" content="Millington Village Hall in the Yorkshire Wolds - hire, accommodation, and local information." />
-        <link rel="stylesheet" href="style/site.css?v=1771586624" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="stylesheet" href="style/site.css?v=1771586817" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="icon" href="/favicon.ico" sizes="any" />
+        <link rel="manifest" href="/site.webmanifest" />
     </head>
     <body>
         <header class="topbar">
@@ -132,7 +136,10 @@
                         <img class="thumb-full" src="EmmausWindow.jpg" alt="St Margaret’s Church Emmaus window" />
                         <div>
                             <h4>Local heritage</h4>
-                            <p>Tom Denny created a contemporary stained glass “Emmaus Window” for St Margaret’s Church in Millington, East Riding of Yorkshire, installed in 2007. The window depicts the biblical story of the Road to Emmaus, showing the risen Christ revealed to two disciples in the breaking of bread, while also incorporating elements of the local Yorkshire Wolds landscape. It is a notable modern addition to the historic Norman church and was dedicated by the Archbishop of York at the time of its installation.</p>
+                            <p>
+                                Tom Denny created a contemporary stained glass “Emmaus Window” for St Margaret’s Church in Millington, East Riding of Yorkshire, installed in 2007. The window depicts the biblical story of the Road to Emmaus, showing the risen Christ revealed to two disciples in the breaking of bread, while also incorporating elements of the local Yorkshire Wolds landscape. It is a notable modern addition to the historic Norman church and was dedicated by the Archbishop of York at
+                                the time of its installation.
+                            </p>
                         </div>
                     </div>
                 </article>
@@ -143,9 +150,7 @@
             <div class="container foot">
                 <div><a href="tel:01759 301931">01759 301931</a> • <a href="mailto:accommodation@millingtonvillagehall.org.uk">accommodation@millingtonvillagehall.org.uk</a></div>
                 <div>
-                    <a href="location.html">Location</a> •
-                    <a href="accommodation.html">Accommodation</a> •
-                    <a href="around.html">Around Millington</a> •
+                    <a href="location.html">Location</a> • <a href="accommodation.html">Accommodation</a> • <a href="around.html">Around Millington</a> •
                     <a href="events.html">Events</a>
                 </div>
             </div>
