--- a/location.html
+++ b/location.html
@@ -6,8 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Location • Millington Village Hall</title>
         <meta name="description" content="Find Millington Village Hall on Church Lane, Millington, York." />
-        <link rel="stylesheet" href="style/site.css?v=1771586624" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="stylesheet" href="style/site.css?v=1771586817" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="icon" href="/favicon.ico" sizes="any" />
+        <link rel="manifest" href="/site.webmanifest" />
     </head>
     <body>
         <header class="topbar">
